feat: improve redirect to allow url rewrite, update dfget.yaml
Signed-off-by: momiji <teq1uila-free01@yahoo.fr>

--- a/docs/en/deployment/configuration/dfget.yaml
+++ b/docs/en/deployment/configuration/dfget.yaml
@@ -236,6 +236,9 @@ proxy:
     # proxy requests with redirect
     - regx: some-registry
       redirect: another-registry
+    # the same with url rewrite like apache ProxyPass directive
+    - regx: ^http://some-registry/(.*)
+      redirect: http://another-registry/$1
 
   hijackHTTPS:
     # key pair used to hijack https requests
