--- a/test/testdata/charts/config.yaml
+++ b/test/testdata/charts/config.yaml
@@ -3,35 +3,35 @@ scheduler:
   tag: latest
   replicas: 3
   extraVolumeMounts:
-    - name: logs
-      mountPath: "/var/log/dragonfly"
+  - name: artifact
+    mountPath: /tmp/artifact
   extraVolumes:
-    - name: logs
-      hostPath:
-        path: /tmp/artifact
+  - name: artifact
+    hostPath:
+      path: /tmp/artifact
 
 cdn:
   image: d7yio/cdn
   tag: latest
   replicas: 3
   extraVolumeMounts:
-    - name: logs
-      mountPath: "/var/log/dragonfly"
+  - name: artifact
+    mountPath: /tmp/artifact
   extraVolumes:
-    - name: logs
-      hostPath:
-        path: /tmp/artifact
+  - name: artifact
+    hostPath:
+      path: /tmp/artifact
 
 dfdaemon:
   image: d7yio/dfdaemon
   tag: latest
   extraVolumeMounts:
-    - name: logs
-      mountPath: "/var/log/dragonfly"
+  - name: artifact
+    mountPath: /tmp/artifact
   extraVolumes:
-    - name: logs
-      hostPath:
-        path: /tmp/artifact
+  - name: artifact
+    hostPath:
+      path: /tmp/artifact
   config:
     scheduler:
       disableAutoBackSource: true
@@ -56,9 +56,9 @@ manager:
   tag: latest
   replicas: 3
   extraVolumeMounts:
-    - name: logs
-      mountPath: "/var/log/dragonfly"
+  - name: artifact
+    mountPath: /tmp/artifact
   extraVolumes:
-    - name: logs
-      hostPath:
-        path: /tmp/artifact
+  - name: artifact
+    hostPath:
+      path: /tmp/artifact
