--- a/.github/workflows/compatibility-e2e.yml
+++ b/.github/workflows/compatibility-e2e.yml
@@ -2,11 +2,11 @@ name: Compatibility E2E Test
 
 on:
   push:
-    branches: [ main, release-* ]
-    paths-ignore: [ '**.md', '**.png', '**.jpg', '**.svg', '**/docs/**' ]
+    branches: [main, release-*]
+    paths-ignore: ["**.md", "**.png", "**.jpg", "**.svg", "**/docs/**"]
   pull_request:
-    branches: [ main, release-* ]
-    paths-ignore: [ '**.md', '**.png', '**.jpg', '**.svg', '**/docs/**' ]
+    branches: [main, release-*]
+    paths-ignore: ["**.md", "**.png", "**.jpg", "**.svg", "**/docs/**"]
 
 env:
   GO_VERSION: 1.17
@@ -89,7 +89,4 @@ jobs:
         with:
           name: ${{ matrix.module }}-compatibility-e2e-tests-logs
           path: |
-            /tmp/artifact/manager/*.log
-            /tmp/artifact/daemon/*.log
-            /tmp/artifact/scheduler/*.log
-            /tmp/artifact/cdn/*.log
+            /tmp/artifact/**/*.log
