--- a/docs/zh-CN/deployment/configuration/scheduler.yaml
+++ b/docs/zh-CN/deployment/configuration/scheduler.yaml
@@ -24,6 +24,10 @@ scheduler:
   algorithm: default
   # 单个任务允许客户端回源的数量
   backSourceCount: 3
+  # 调度重试次数限制
+  retryLimit: 10
+  # 调度重试时间间隔
+  retryInterval: 1s
   # 数据回收策略
   gc:
     # peer 的回收间隔
