test: dump goroutine in e2e
Signed-off-by: Jim Ma <majinjing3@gmail.com>

--- a/test/testdata/charts/config.yaml
+++ b/test/testdata/charts/config.yaml
@@ -33,6 +33,8 @@ dfdaemon:
     hostPath:
       path: /tmp/artifact
   config:
+    verbose: true
+    pprofPort: 9999
     scheduler:
       disableAutoBackSource: true
     proxy:
