feat: add retry interval
Signed-off-by: Gaius <gaius.qi@gmail.com>

--- a/docs/en/deployment/configuration/scheduler.yaml
+++ b/docs/en/deployment/configuration/scheduler.yaml
@@ -30,6 +30,8 @@ scheduler:
   backSourceCount: 3
   # retry scheduling limit times
   retryLimit: 5
+  # retry scheduling interval
+  retryInterval: 200ms
   # gc metadata configuration
   gc:
     # peerGCInterval peer's gc interval
