--- a/docs/zh-CN/deployment/configuration/scheduler.yaml
+++ b/docs/zh-CN/deployment/configuration/scheduler.yaml
@@ -7,7 +7,7 @@ server:
   # 服务监听端口
   port:
   # 限制请求并发数
-  listenLimit: 1000
+  listenLimit: 10000
   # daemon 动态配置缓存目录
   # linux 上默认目录 /var/cache/dragonfly
   # macos(仅开发、测试), 默认目录是 /Users/$USER/.dragonfly/cache
@@ -27,9 +27,9 @@ scheduler:
   # 单个任务允许客户端回源的数量
   backSourceCount: 3
   # 调度重试次数限制
-  retryLimit: 10
+  retryLimit: 20
   # 调度重试时间间隔
-  retryInterval: 1s
+  retryInterval: 500ms
   # 数据回收策略
   gc:
     # peer 的回收间隔
