--- a/docs/zh-CN/deployment/configuration/scheduler.yaml
+++ b/docs/zh-CN/deployment/configuration/scheduler.yaml
@@ -111,7 +111,7 @@ console: false
 verbose: false
 
 # pprofPort pprof 监听的端口，仅在 verbose 为 true 时可用
-pprofPort: -1
+pprof-port: -1
 
 # jaeger 地址
 # 默认使用空字符串（不配置 jaeger）, 例如: http://jaeger.dragonfly.svc:14268/api/traces
