feat: update submodule helm charts
Signed-off-by: Gaius <gaius.qi@gmail.com>

--- a/docs/en/deployment/configuration/dfget.yaml
+++ b/docs/en/deployment/configuration/dfget.yaml
@@ -33,7 +33,7 @@ keepStorage: true
 # console shows log on console
 console: false
 
-# Whether to enable debug level logger and enable pprof
+# whether to enable debug level logger and enable pprof
 verbose: false
 
 # listen port for pprof, only valid when the verbose option is true
