--- a/docs/en/deployment/configuration/scheduler.yaml
+++ b/docs/en/deployment/configuration/scheduler.yaml
@@ -109,7 +109,7 @@ metrics:
 # console shows log on console
 console: false
 
-# Whether to enable debug level logger and enable pprof
+# whether to enable debug level logger and enable pprof
 verbose: false
 
 # listen port for pprof, only valid when the verbose option is true
