--- a/docs/zh-CN/deployment/configuration/manager.yaml
+++ b/docs/zh-CN/deployment/configuration/manager.yaml
@@ -48,13 +48,13 @@ database:
 #  # 数据服务地址
 #  addr: ":8000"
 
-# Console 是否在控制台程序中显示日志
+# console 是否在控制台程序中显示日志
 console: false
 
 # verbose 是否使用调试级别的日志、是否启用 pprof。
 verbose: false
 
-# pprofPort pprof 监听的端口，仅在 verbose 为 true 时可用
+# pprof-port pprof 监听的端口，仅在 verbose 为 true 时可用
 pprof-port: -1
 
 # jaeger 地址
