--- a/docs/en/deployment/configuration/cdn.yaml
+++ b/docs/en/deployment/configuration/cdn.yaml
@@ -105,17 +105,15 @@ plugins:
               cleanRatio: 3
               intervalThreshold: 2h0m0s
 
-# Console shows log on console
-# default: false
+# console shows log on console
 console: false
 
-# Whether to enable debug level logger and enable pprof
-# default: false
+# whether to enable debug level logger and enable pprof
 verbose: false
 
 # listen port for pprof, only valid when the verbose option is true
 # default is -1. If it is 0, pprof will use a random port.
-pprofPort: -1
+pprof-port: -1
 
 # jaeger endpoint url, like: http://jaeger.dragonfly.svc:14268/api/traces
 jaeger: ""
