--- a/docs/zh-CN/deployment/configuration/scheduler.yaml
+++ b/docs/zh-CN/deployment/configuration/scheduler.yaml
@@ -26,10 +26,12 @@ scheduler:
   algorithm: default
   # 单个任务允许客户端回源的数量
   backSourceCount: 3
+  # 调度回源重试次数限制
+  retryBackSourceLimit: 5
   # 调度重试次数限制
   retryLimit: 20
   # 调度重试时间间隔
-  retryInterval: 500ms
+  retryInterval: 200ms
   # 数据回收策略
   gc:
     # peer 的回收间隔
