--- a/docs/en/deployment/configuration/dfget.yaml
+++ b/docs/en/deployment/configuration/dfget.yaml
@@ -30,6 +30,19 @@ dataDir: ""
 # default is false
 keepStorage: true
 
+# console shows log on console
+console: false
+
+# whether to enable debug level logger and enable pprof
+verbose: false
+
+# listen port for pprof, only valid when the verbose option is true
+# default is -1. If it is 0, pprof will use a random port.
+pprof-port: -1
+
+# jaeger endpoint url, like: http://jaeger.dragonfly.svc:14268/api/traces
+jaeger: ""
+
 # all addresses of all schedulers
 # the schedulers of all daemons should be same in one region or zone.
 # daemon will send tasks to a fixed scheduler by hashing the task url and meta data
@@ -52,13 +65,6 @@ scheduler:
   netAddrs:
     - type: tcp
       addr: 127.0.0.1:8002
-
-# when enable, pprof will be enabled
-verbose: true
-
-# telemetry config
-# jaeger url, like: http://jaeger.dragonfly.svc:14268/api/traces
-jaeger: ""
 
 # current host info used for scheduler
 host:
