--- a/docs/en/deployment/configuration/scheduler.yaml
+++ b/docs/en/deployment/configuration/scheduler.yaml
@@ -109,12 +109,12 @@ metrics:
 # console shows log on console
 console: false
 
-# Whether to enable debug level logger and enable pprof
+# whether to enable debug level logger and enable pprof
 verbose: false
 
 # listen port for pprof, only valid when the verbose option is true
 # default is -1. If it is 0, pprof will use a random port.
-pprofPort: -1
+pprof-port: -1
 
 # jaeger endpoint url, like: http://jaeger.dragonfly.svc:14268/api/traces
 jaeger: ""
