--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -40,6 +40,12 @@ jobs:
           mkdir -p /tmp/artifact
           go mod vendor
 
+      - name: Setup buildx
+        uses: docker/setup-buildx-action@v1
+        id: buildx
+        with:
+          install: true
+
       - name: Setup Kind
         uses: engineerd/setup-kind@v0.5.0
         with:
@@ -47,7 +53,9 @@ jobs:
           config: ${{ env.KIND_CONFIG_PATH }}
 
       - name: Build images
-        run: make -j 5 docker-build docker-build-testing-tools
+        run: |
+          hack/gen-buildx.sh
+          make docker-build docker-build-testing-tools
 
       - name: Prepare kind environment
         run: make kind-load
