--- a/.github/workflows/compatibility-e2e.yml
+++ b/.github/workflows/compatibility-e2e.yml
@@ -45,6 +45,12 @@ jobs:
           mkdir -p /tmp/artifact
           go mod vendor
 
+      - name: Setup buildx
+        uses: docker/setup-buildx-action@v1
+        id: buildx
+        with:
+          install: true
+
       - name: Setup Kind
         uses: engineerd/setup-kind@v0.5.0
         with:
@@ -53,11 +59,9 @@ jobs:
 
       - name: Build images
         run: |
+          hack/gen-buildx.sh
           make docker-build docker-build-testing-tools
           docker pull dragonflyoss/${{ matrix.module }}:${{ env.DRAGONFLY_STABLE_IMAGE_TAG }}
-
-      - name: Prepare kind environment
-        run: |
           make kind-load
           kind load docker-image dragonflyoss/${{ matrix.module }}:${{ env.DRAGONFLY_STABLE_IMAGE_TAG }}
 
