--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -54,7 +54,8 @@ jobs:
       - name: Build images
         run: |
           hack/gen-buildx.sh
-          make docker-build docker-build-testing-tools
+          make -j 5 build-manager-console docker-build-cdn docker-build-dfdaemon docker-build-scheduler docker-build-testing-tools
+          make docker-build-manager
           make kind-load
 
       - name: Setup dragonfly
